--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <h1>The Game 1.0</h1>
+    <h1>Micro Space Invaders</h1>
 
     <script src="./scripts/index.js"></script>
   </body>
