--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <h1>Micro Space Invaders</h1>
 
+    <p>test</p>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
