fist css changes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <h1>Micro Space Invaders</h1>
+    <header>Micro Space Invaders</header>
 
-    <p>test</p>
+    <div class="grid-wrapper">
+      <div class="grid"></div>
+    </div>
 
     <script src="./scripts/index.js"></script>
   </body>
