--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <h1>The Game 1.0</h1>
+    <header>Micro Space Invaders</header>
+
+    <div class="grid-wrapper">
+      <div class="grid">
+        <img src="./images/medical-mask-flat-design/3636927.jpg" alt="Mask" />
+      </div>
+    </div>
 
     <script src="./scripts/index.js"></script>
   </body>
