--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
     <header>Micro Space Invaders</header>
 
     <div class="grid-wrapper">
-      <div class="grid">
-        <img src="./images/medical-mask-flat-design/3636927.jpg" alt="Mask" />
-      </div>
+      <div class="grid"></div>
     </div>
-
-    <p>Gabreil</p>
 
     <script src="./scripts/index.js"></script>
   </body>
