--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <header>Micro Space Invaders</header>
+    <header>Space Invaders</header>
 
     <div class="grid-wrapper">
       <div class="grid"></div>
     </div>
+
 
     <script src="./scripts/index.js"></script>
   </body>
