--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <header>Space Invaders</header>
 
     <div class="grid-wrapper">
-      <div class="grid"></div>
+      <button class="Reset" onclick="releaseEvents">Reset</button>
+      <h2>SCORE:</h2>
     </div>
 
+    <div class="grid-wrapper">
+      <div class="grid"></div>
+    </div>
 
     <script src="./scripts/index.js"></script>
   </body>
