first mvp version(jus-audio-included)

--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <header>Space Invaders</header>
-    <h2>SCORE:</h2>
+    <header>Bizarre ¿Invaders?</header>
+    <h2>SCORE:<span id="result"></span></h2>
 
     <div class="grid-wrapper">
       <div class="grid"></div>
     </div>
+
+    <audio
+      src="./docs/rigoberta-bandini-in-spain-we-call-it-soledad-videoclip.mp3"
+      controls
+    ></audio>
 
     <div class="grid-wrapper">
       <button class="Reset" onclick="releaseEvents">Reset</button>
