--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>Bizarre ¿Invaders?</header>
-    <h2>SCORE:<span id="result"></span></h2>
+    <h2>SCORE:<span id="result">0</span></h2>
 
     <div class="grid-wrapper">
       <div class="grid"></div>
