--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
       controls
     ></audio>
 
-    <div class="grid-wrapper">
-      <button class="Reset" onclick="releaseEvents">Reset</button>
+    <div>
+      <img id="gameover"/></img>
+
     </div>
+
+    
 
     <script src="./scripts/index.js"></script>
   </body>
